# read-you

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: example.yaml  secrets.yaml.template
examples/: generate_examples.py
examples/self-generated/: README.md
src/: main.py  readme_generator.py
tests/: test_readme_generator.py
