[project]
name = "read-you"
version = "0.1.0"
description = "A tool to automatically generate README files for repositories using OpenAI"
authors = [
    {name = "pope"}
]
dependencies = [
    "openai>=1.0.0",
    "pyyaml>=6.0.1",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
keywords = ["readme", "documentation", "openai", "ai", "generator"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/yourusername/read-you"
Repository = "https://github.com/yourusername/read-you.git"

[project.scripts]
read-you = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
